--- a/informe/arquitectura.tex
+++ b/informe/arquitectura.tex
@@ -2,7 +2,20 @@
 
 \subsubsection{Nivel 0}
 
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{diagramas/Nivel0.png}
+  \caption{\normalfont }
+\end{figure} 
+
+
 \subsubsection{ReciBarFiesta}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{diagramas/ReciBarFiesta.png}
+  \caption{\normalfont }
+\end{figure} 
 
 \subsubsection{Manejador de Eventos}
 
