Se actualiza exp. de driver valorador de eventos

--- a/informe/arquitectura.tex
+++ b/informe/arquitectura.tex
@@ -49,7 +49,7 @@ Una vez finalizada la operación, la misma se guarda en el historial de acciones
 
 \textbf{Valorador de Eventos}
 
-Este componente es el encargado de almacenar las valoraciones de los usuarios en el perfil del evento correspondiente. Una valoración debe incluir al menos un valor seleccionable para los features de un evento, que dependen del tipo del mismo, y además puede o no incluir un comentario asociado a dicha valoración. El driver de valoración de eventos, en caso de que la valoración contenga un comentario, se encargará de validar el mismo interactuando con la API de moderación de contenidos. Una vez validado, procederá a guardar la valoración en la base de Perfiles del evento correspondiente. En caso de no ser validado por la API, se almacenará la valoración sin el comentario y se devolverá un mensaje de error.
+Este componente es el encargado de almacenar las valoraciones de los usuarios en el perfil del evento correspondiente. Una valoración debe incluir al menos un valor seleccionable para los features de un evento, que dependen del tipo del mismo, y además puede o no incluir un comentario asociado a dicha valoración. En caso de contener un comentario, éste se encolará para que sea validado interactuando con la API de moderación de contenidos, y luego guardado por el persistidor de Comentarios. En caso de que la conexión con la API se vuelva lenta, se guardará por un lado la valoración y el comentario asociado quedará encolado hasta que sea validado, y luego almacenado. En caso de ocurrir esto se avisará al usuario con mensaje al retornar la respuesta. Si el comentario no es apropiado, se devolverá un mensaje de error. Por otro lado, al persistir las valoraciones, éstas son guardadas temporalmente en un repositorio de últimas valoraciones efectuadas. Este repositorio es leído continuamente por un componente encargado de detectar si se están produciendo demasiadas valoraciones similares al mismo evento; y, en caso de detectarlo, enviará un mail a través del Mail Sender para que la situación sea revisada manualmente.
 
 \textbf{Buscador de Eventos}
 
