--- a/informe/arquitectura.tex
+++ b/informe/arquitectura.tex
@@ -19,11 +19,35 @@
 
 \subsubsection{Manejador de Eventos}
 
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{diagramas/ManejadorDeEventos.png}
+  \caption{\normalfont }
+\end{figure} 
+
 \subsubsection{Manejador de Usuarios}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{diagramas/ManejadorDeUsuarios.png}
+  \caption{\normalfont }
+\end{figure} 
 
 \subsubsection{Manejador de Reservas}
 
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{diagramas/ManejadorReservas.png}
+  \caption{\normalfont }
+\end{figure} 
+
 \subsubsection{Manejador de Publicidades}
+
+\begin{figure}[H]
+  \centering
+  \includegraphics[width=\textwidth]{diagramas/ManejadorDePublicidades.png}
+  \caption{\normalfont }
+\end{figure} 
 
 \subsection{Explicación de la Arquitectura}
 
