--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -91,6 +91,7 @@
 \section{Plan de Proyecto}
 \input{plan.tex}
 \newpage
+\setlist[itemize]{leftmargin=0.6cm}
 
 \section{Especificación de Escenarios}
 \input{escenarios.tex}
