--- a/informe/arquitectura.tex
+++ b/informe/arquitectura.tex
@@ -83,4 +83,10 @@ El Driver Buscador de Eventos manejará las búsquedas realizadas por los usuari
 
 \subsubsection{Manejador de Usuarios}
 
-El manejador de usuarios es el componente que se ocupa de todo lo referido a usuarios, 
+El manejador de usuarios es el componente que se ocupa de todo lo referido a usuarios. Se ocupará, entre otras cosas, de almacenar la información de los usuarios y sus acciones relevantes en la aplicación. 
+
+Interactuará con la empresa de análisis de datos y con la UI de ReciBarFiesta.
+
+\textbf{Acciones de Usuarios (PubSub) y Encriptador}
+
+Estos dos componentes son los más importantes a la hora de 
