--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -99,6 +99,12 @@
 
 \section{Arquitectura}
 \input{arquitectura.tex}
+
+\input{arquitectura-preguntas.tex}
+\newpage
+
+\section{Conclusión}
+\input{conclusion.tex}
 \newpage
 
 \section{Referencias}
