--- a/informe/conclusion.tex
+++ b/informe/conclusion.tex
@@ -17,4 +17,16 @@ UP, por otro lado, contiene una larga lista de documentos y herramientas para pl
 
 \subsection{Programming in the small y Programming in the large}
 
+Programming in the large y programming in the small describen dos aproximaciones diferentes al diseño y desarrollo de software. 
+
+Programming in the large involucra en general productos de software desarrolloados por grupos a lo largo de extensas cantidades de tiempo. Con programming in the large, los diseñadores hacen hincapié en particionar el trabajo en modulos con interacciones bien definidas. Esto requiere una cuidadosa planificación además de una cuidadosa documentación. Programming in the large en general se refiere a diseñar el sistema desde un alto nivel, donde solo importa el estado de los módulos y sus interacciones, y no su implementación real.
+
+Debido a todas estas características, el programming in the large es importante planificar a largo plazo, tener en cuenta riesgos y darle mucha importancia a la arquitectura del software. Por esta razón, programming in the large suele estar asociado con UP.
+
+Por otro lado, programming in the small describe la actividad de escribir pequeños programas, es decir, cuyo desarrollo toma poco tiempo. En general programming in the small es llevado a cabo por personas individuales o pequeños equipos.
+
+Debido a que en general se busca velocidad en el desarrollo de estas pequeñas piezas de software, y mejorarlas de manera incremental, programming in the small suele asociarse con métodos de desarrollo ágiles, como Scrum.
+
 \subsection{Conclusiones generales}
+
+???
