--- a/informe/cu.tex
+++ b/informe/cu.tex
@@ -1,7 +1,7 @@
 % Please add the following required packages to your document preamble:
 % \usepackage[table,xcdraw]{xcolor}
 % If you use beamer only pass "xcolor=table" option, i.e. \documentclass[xcolor=table]{beamer}
-\begin{table}[]
+\begin{table}[H]
 \centering
 \begin{tabular}{|l|l|c|}
 \hline
@@ -31,6 +31,13 @@ CU18                                                          & Combinando event
 \end{table}
 
 \subsection{Diagrama de Casos de uso}
+
+\begin{figure}[H]
+ \centering
+  \includegraphics[width=\textwidth]{diagramas/casosDeUso.png}
+  \caption{Diagrama de Casos de Uso de ReciBarFiesta}
+  \label{fig:cu}
+\end{figure}
 
 \subsection{Descripción de los Casos de uso}
 \begin{enumerate}
