--- a/informe/conclusion.tex
+++ b/informe/conclusion.tex
@@ -29,4 +29,8 @@ Debido a que en general se busca velocidad en el desarrollo de estas pequeñas p
 
 \subsection{Conclusiones generales}
 
-???
+Como conclusión general, podemos decir que los dos trabajos prácticos nos permitieron apreciar dos m\'etodos de desarrollo y planificación de desarrollo de software muy distintos, que aplican a situaciones distintas. 
+
+UP permite llevar a cabo proyectos enormes, que se extenderán durante mucho tiempo. Por eso se requiere planificar todo al detalle, pensar en los riesgos, diseñar la arquitectura del software puntillosamente, de tal manera que la gran inversión de tiempo y dinero no sea en vano.
+
+Por otro lado, las metodologías ágiles que vimos para el primer trabajo práctico, permiten desarrollar de forma muy rápida softwares pequeños. Es muy buena para desarrollar prototipos o borradores de softare (por ejemplo, Most Viable Products), y luego incrementarlos de a poco. Sin embargo, los equipos tienen que ser más pequeños que para UP (que por su alto nivel de planeamiento soporta equipos muchísimo más grandes).
