Agregado Vista de Requests al label

--- a/informe/arquitectura.tex
+++ b/informe/arquitectura.tex
@@ -38,7 +38,7 @@
 \begin{figure}[H]
   \centering
   \includegraphics[width=\textwidth]{diagramas/ManejadorReservas.png}
-  \caption{\normalfont Vista del Manejador De Reservas. (Hacer zoom para visualizar correctamente)}
+  \caption{\normalfont Vista del Manejador De Reservas. Vista del Manejador De Requests. (Hacer zoom para visualizar correctamente)}
 \end{figure} 
 
 \subsubsection{Manejador de Publicidades}
