--- a/informe/informe.tex
+++ b/informe/informe.tex
@@ -107,6 +107,21 @@
 \input{conclusion.tex}
 \newpage
 
-\section{Referencias}
+\begin{thebibliography}{9}
+
+\bibitem{inpractice}
+  Len Bass et al.,
+  \emph{Software Architecture in Pratice}.
+  Addison-Wesley,
+  2nd edition.
+
+\bibitem{documenting}
+  Paul Clements et al.,
+  \emph{Documenting Software Architecture}.
+  SEI Series in Software Engineering,
+  2nd edition.
+
+\end{thebibliography}
+
 
 \end{document}
